--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+# Database Configuration
 spring.datasource.url=jdbc:mariadb://localhost:3306/marketplace_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+# JWT Secret Key
+jwt.secret=N145S987fmj!
