--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,21 @@
+server.port=8080
+
 # Database Configuration
 spring.datasource.url=jdbc:mariadb://localhost:3306/marketplace_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
-# JWT Secret Key
-jwt.secret=N145S987fmj!
+# Hibernate and JPA Configuration
+spring.jpa.open-in-view=false
+
+# JWT Configuration
+app.jwt.secret=VWykyZ8oMfvoCIowo+/1N+3bZn7UxrI0wIQWfo76nUg=
+app.jwt.expirationMs=86400000
+
+# CORS Configuration (if needed)
+spring.web.cors.allowed-origins=http://localhost:3000
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.web.cors.allowed-headers=Authorization,Content-Type
