Polished JWT configuration for security, including externalized secret.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.open-in-view=false
 
 # JWT Configuration
-app.jwt.secret=VJV4OzT6WPXbGA7kXXrk5dwSe3Gv2MVDwXATs9rf+lY=
+app.jwt.secret=${APP_JWT_SECRET}
 app.jwt.expirationMs=86400000
+
 
 # CORS Configuration (if needed)
 spring.web.cors.allowed-origins=http://localhost:3000
