- Moved registerUser logic from UserController to UserServiceImpl. - Updated UserService to accept UserDTO. - Improved separation of concerns and simplified controller logic - cleaned up the code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Server Configuration
 server.port=8080
 
 # Database Configuration
@@ -15,8 +16,8 @@ spring.jpa.open-in-view=false
 app.jwt.secret=${APP_JWT_SECRET}
 app.jwt.expirationMs=86400000
 
-
-# CORS Configuration (if needed)
-spring.web.cors.allowed-origins=http://localhost:3000
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
-spring.web.cors.allowed-headers=Authorization,Content-Type
+# CORS Configuration (handled in SecurityConfig)
+# The following lines are no longer necessary as CORS is configured in SecurityConfig
+# spring.web.cors.allowed-origins=http://localhost:3000
+# spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
+# spring.web.cors.allowed-headers=Authorization,Content-Type
