--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,13 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 # Hibernate and JPA Configuration
 spring.jpa.open-in-view=false
 
 # JWT Configuration
+
 app.jwt.secret=${APP_JWT_SECRET}
 app.jwt.expirationMs=86400000
 
