--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,22 +3,23 @@ server.port=8080
 
 # Database Configuration
 spring.datasource.url=jdbc:mariadb://localhost:3306/marketplace_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=marketplace_user
+spring.datasource.password=rootmarket
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
-# Hibernate and JPA Configuration
-spring.jpa.open-in-view=false
-
 # JWT Configuration
-
 app.jwt.secret=${APP_JWT_SECRET}
 app.jwt.expirationMs=86400000
 
-# CORS Configuration (handled in SecurityConfig)
-# The following lines are no longer necessary as CORS is configured in SecurityConfig
-# spring.web.cors.allowed-origins=http://localhost:3000
-# spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
-# spring.web.cors.allowed-headers=Authorization,Content-Type
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.se.alex.lexicon.marketplace=DEBUG
+
+# Swagger Configuration (Optional)
+springfox.documentation.swagger.v2.path=/api-docs
+
+
