--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,7 +11,10 @@ node_modules
 dist
 dist-ssr
 *.local
-
+# frontend/.gitignore
+node_modules
+dist
+.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
