"Fix RegisterPage form layout and import issue" "Update Footer component import in RegisterPage" "Resolve broken links and missing components in UI" "Implement JWT authentication logic in frontend" "Fix UI issues on login page and align form elements" "Update API call for user registration in RegisterPage" "Correct the import paths for components in RegisterPage" "Update frontend CORS configuration to support new routes" "Integrate form validation for login and registration forms" "Adjust layout and styling for profile and registration pages" "Fix issue with missing form data on registration" "Add category and product listing UI for dashboard"

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,29 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "jsx": "react-jsx",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "types": ["node"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+  "include": [
+    "src/**/*",
+    "src/hooks/useAuth.ts"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
