--- a/package.json
+++ b/package.json
@@ -18,6 +18,22 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.6"
+  },
+  "scripts": {
+    "dev": "react-scripts start"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
